# hardik-agent

./: .env.example  LICENSE  MANIFEST.in  README.md  blog.md  main.py  pyproject.toml  requirements.txt  setup.py  start_hardik.bat  test_brain.py  test_tools.py  test_tray.py  test_voice.py  test_voice_ai.py  test_voice_tools.py
agent/: brain.py  conversation.py  fix_json.py  langchain_brain.py  langgraph_brain.py
auth/: login.py  password_manager.py  session.py  signup.py
automation/: browser_automation.py  eye_control.py  gui_automation.py  messaging.py  system_automation.py
cli/: commands.py
config/: settings.py
gui/: dashboard.py  profile.py
memory/: memory_manager.py
runtime/: event_loop.py  startup.py  tray.py
security/: confirmations.py  permissions.py  safe_execution.py
tools/: app_tools.py  open_web_fix.py  tool_registry.py
voice/: microphone.py  speech_to_text.py  text_to_speech.py  wakeword.py
