[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexa-agent"
version = "1.0.2"
description = "Hexa - Voice Controlled AI Desktop Assistant"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer",
    "rich",
    "python-dotenv",
    "bcrypt",
    "openai-whisper",
    "sounddevice",
    "scipy",
    "pyttsx3",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langgraph",
    "chromadb",
    "pyautogui",
    "psutil",
    "pillow",
    "pystray",
    "customtkinter",
    "pyperclip",
    "ollama",
]

[project.scripts]
hexa-agent = "main:app"

[tool.setuptools.packages.find]
where = ["."]
